--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -29,7 +29,7 @@
     }
 
     background-color: white;
-    width: 50%;
+    width: 48%;
     position: relative;
     text-align: center;
     border-radius: 10px;
@@ -46,20 +46,25 @@
   }
   .box {
     display: flex;
-    justify-content: space-between;
+    margin-bottom: 0.2rem;
+    margin-left: 0.5rem;
+
+    justify-content: space-around;
     align-content: center;
 
     .container_signIn {
       float: left;
       width: 50%;
       margin-left: 3%;
-      margin-right: 4%;
+      // margin-right: 4%;
       margin-bottom: 3%;
     
 
       .user_title {
-        font-family: 'Amatic SC', cursive;
-        font-size: 1.5rem;
+        // font-family: 'Amatic SC', cursive;
+        font-family: 'Advent Pro', sans-serif;
+        // font-size: 1.5rem;
+        font-size: 1.1rem;
         display: flex;
         justify-content: flex-start;
         align-content: center;
@@ -69,7 +74,7 @@
       input[type="email"],
       input[type="password"]{
         display: flex;
-        width: 100%;
+        width: 95%;
         font-size: 0.9rem;
         border-radius: 5px;
         border-width: 1.6px;
@@ -153,6 +158,7 @@
       width: 1px;
       height: 10rem;
       margin-top: 3%;
+      margin-left: 1.5rem;
       
       direction: column;
       
@@ -164,8 +170,10 @@
       // margin-right: 3%;
       // margin-bottom: 3%;
       #social_login_title {
-        font-family: 'Amatic SC', cursive;
-        font-size: 1.5rem;
+        // font-family: 'Amatic SC', cursive;
+        font-family: 'Advent Pro', sans-serif;
+        // font-size: 1.5rem;
+        font-size: 1.1rem;
         display: flex;
         justify-content: flex-start;
         
