:adhesive_bandage: 이메일찾기, 비밀번호 찾기 UI/UX 업데이트

--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -120,7 +120,7 @@ $black: rgba(24, 10, 10, 0.932);
     align-items: center;
   }
 
-  &.middleWidth_SignIn_btn {
+  &.middleWidth_main_btn {
     width: 65%;
     display:flex;
     // display: flex-end;
