--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -36,14 +36,14 @@
     color: black;
   }
 
-  #signIn_logo {
-    // display: block;
-    // width: inherit;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    max-width: 50%;
-    // height: auto;
-  }
+  // #signIn_logo {
+  //   // display: block;
+  //   // width: inherit;
+  //   padding-top: 5%;
+  //   padding-bottom: 5%;
+  //   max-width: 50%;
+  //   // height: auto;
+  // }
   .box {
     display: flex;
     margin-bottom: 0.2rem;
@@ -102,7 +102,7 @@
         margin-left: 7%;;
         margin-bottom: 3px;
 
-        .email_div {
+        .email_div {   // 에러메세지
           div {
             float: right;
             font-size: 0.5rem;
@@ -169,16 +169,6 @@
       width: 40%;
       // margin-right: 3%;
       // margin-bottom: 3%;
-      #social_login_title {
-        // font-family: 'Amatic SC', cursive;
-        font-family: 'Advent Pro', sans-serif;
-        // font-size: 1.5rem;
-        font-size: 1.1rem;
-        display: flex;
-        justify-content: flex-start;
-        
-      }
-                
       .socialLogin{
         // margin:0 10%;
         padding-left: 20%;
@@ -187,6 +177,17 @@
         // justify-content: center;
         // align-items: center;
         // flex-direction: row;
+        
+        #social_login_title {
+          // font-family: 'Amatic SC', cursive;
+          font-family: 'Advent Pro', sans-serif;
+          // font-size: 1.5rem;
+          font-size: 1.1rem;
+          display: flex;
+          justify-content: flex-start;
+          
+        }
+                
         .socialLogin_btn{
           
           margin-top: 1rem;
