:adhesive_bandage: 커서 포인터 업데이트

--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -116,6 +116,7 @@
             display: flex;
             padding: 5% 9%;
             font-size: 0.8rem;
+            cursor: pointer;
           }
         }
       }
@@ -167,6 +168,7 @@
             padding: 5% 9%;
             
             font-size: 0.8rem;
+            cursor: pointer;
           }
         }
       }
