:zap: 사용자가 최하단에 위치했을 경우 main컴포넌트의 최상단으로 이동하는 이벤트 구현

--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -22,10 +22,27 @@
   .AddPhoto-button {
     border: none;
   }
+
+
+  .scoll_to_top {
+    color: white;
+    position: absolute;
+    // max-width: 100%;
+    top: 88%;
+    left: 95%;
+    &:hover {
+      cursor: pointer;
+    }
+      
+    // display: flex;
+    
+    // margin-right: px;
+    
+  }
 }
 
   /* ------------Nav ------------------- */
-  .nav {
+  #nav {
     .nav_div {
       // background: rgba(0, 0, 0, 0.3);
       background: #192f6d;
