:children_crossing: UI 업데이트

--- a/src/css/CompletedFindEmail.scss
+++ b/src/css/CompletedFindEmail.scss
@@ -32,12 +32,44 @@
   }
 
   .email_result_container {
-    background: skyblue;
-    margin-left: 7%;
-    margin-right: 7%;
-    margin-bottom: 7%;
+    // background: yellow;
+    
+    margin: 2rem;
+    .email_result_div {
+      // background: skyblue;
+      // margin-left: 7%;
+      // margin-right: 7%;
+      // width: 30%;
+      display: flex;
+      justify-content: space-around;
+      align-content: center;
+      .email_findEmail {
+        
+        float: left;
+        // display: flex;
+        // justify-items: center;
+        // align-content: center;
+      }
+      
+      // border-width: unset;
+      border: solid rgb(143, 143, 143);
+      border-width: 1px;
+      border-radius: 10px;
+      padding: 1rem;
+      margin-bottom: 7%;
+    }
+    .btn_result_findEmail_container {
+      // display: flex;
+      // justify-content: space-around;
+      .btn_result_findEmail{
+        // float: left;
+        // display: inline;
+        margin-right: 0.5rem;
+        
+      }
+    }
   }
-
+  
   
 }
 
