--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -138,6 +138,7 @@ $black: rgba(24, 10, 10, 0.932);
   }
 
   &.middleWidth_completedFind {
+    // font-family: 'Nanum Gothic', sans-serif;
     width: 40%;
     // display: flex;
     // padding-right: 1rem;
@@ -145,10 +146,5 @@ $black: rgba(24, 10, 10, 0.932);
     // margin-left: 1rem;
     justify-content: center;
     align-items: center;
-    & + & {
-      // margin-left: 1rem;
-      // margin-top: 1rem;
-      display: space-around;
-    }
   }
 }
