--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -137,12 +137,12 @@
 
 .mapImg {
   position: absolute;
-  display: block;
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  bottom: 60%;
   right: 5%;
+  // display: block;
+  // width: 15%;
+  // height: 45%;
+  // bottom: 60%;
+  // left: 5%;
 }
 
 .HowToGo_div {
