:children_crossing: conpletedFindPw 모달 UI/UX 업데이트

--- a/src/css/CompletedFindPw.scss
+++ b/src/css/CompletedFindPw.scss
@@ -17,20 +17,95 @@
   }
 
   .modal_CompletedFindPw_content {
+    font-family: 'Nanum Gothic', sans-serif;
+
     background: white;
     position: relative;
-    width: 30%;
+    width: 40%;
     text-align: center;
     border-radius: 10px;
+    color: black;
+    padding: 2%;
+    h2 {
+      margin-top: unset;
+      margin-bottom: 6%;
+      font-family: 'Noto Serif KR', serif;
+      display: flex;
+      justify-content: center;
+
+      .completedFindPw_title_icon {
+        margin-right: 2.5%;
+        // margin-left: 2.5%;
+        margin-top: 1.5%;
+      }
+    }
+    h4 {
+      display: flex;
+      justify-content: center;
+      font-size: 0.8rem;
+      color: rgb(141, 134, 134);
+    }
+  }
+  
+  .division_line {
+    width: 80%;
+    height: 1px;
+    // margin-left: 5%;
+    background-color: rgba(0, 0, 0, 0.199);
+    margin-left: 10%;
+    // display: flex;
+    // justify-content: center;  
+    
   }
 
   .pw_result_container {
-    background: skyblue;
-    margin-left: 7%;
-    margin-right: 7%;
-    margin-bottom: 7%;
+    // background: yellow;
+    
+    // margin: 2rem;
+    .pw_result_div {
+      color: gray;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      
+      padding: 1rem;
+      // padding-left: 14%;
+      // padding-top: 5%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      // .pw_findpw_1 {
+      //   font-family: 'Noto Serif KR', serif;
+      //   font-size: 1.2rem;
+      // }
+      // .pw_findEmail_2 {
+      //   font-size: 0.65rem ;
+      //   padding-left: 5%;
+      //   padding-top: 11px;
+      //   // float: left;
+      //   // padding-left: unset !important;
+      //   // display: flex;
+      //   // justify-items: center;
+      //   // align-content: center;
 
+      // }
+      .highlighted {
+        color: black;
+      }
+    }
+    .btn_result_findPw_container {
+      // display: flex;
+      // justify-content: space-around;
+      margin-top: 10%;
+      .btn_result_findPw{
+        // float: left;
+        // display: inline;
+        margin-right: 0.5rem;
+        
+      }
+    }
   }
+  
+  
 }
 
 
