--- a/src/css/AddPhoto.scss
+++ b/src/css/AddPhoto.scss
@@ -62,11 +62,24 @@
   }
 }
 
+.uploaded-file {
+  margin-right: 1rem;
+  font-size: 8pt;
+  font-weight: lighter;
+  color: lightgray;
+  cursor: auto;
+  &:hover {
+    color: #c47b7b;
+    text-decoration: line-through;
+    cursor: pointer;
+  }
+}
+
 .input-search {
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
-  width: 7vw;
+  width: 7rem;
   display: inline-block;
   margin-right: 0.5rem;
   transition: width 0.4s ease-in-out;
@@ -80,6 +93,6 @@
   padding: 5px 7px 5px 25px;
   // 자동 늘이기
   &:focus {
-    width: 20vw;
+    width: 10rem;
   }
 }
