:children_crossing: 비밀번호 찾기에서 찾기완료 모달로 이동시 지연시간에 필요한 로딩바 구현

--- a/src/css/FindPw.scss
+++ b/src/css/FindPw.scss
@@ -209,37 +209,41 @@
     }
   }
 
+  
 
-  //--------------------- 로딩 중 로고-------------------------\\
+    .spinner {
+      width: 40px;
+      height: 40px;
+      margin: 100px auto;
 
-  .spinner {
-    width: 40px;
-    height: 40px;
-    margin: 100px auto;
-    background-color: #333;
-  
-    border-radius: 100%;  
-    -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-    animation: sk-scaleout 1.0s infinite ease-in-out;
-  }
-  
-  @-webkit-keyframes sk-scaleout {
-    0% { -webkit-transform: scale(0) }
-    100% {
-      -webkit-transform: scale(1.0);
-      opacity: 0;
+      position: absolute;
+      // display: flex;
+      top: 10%;
+      left: 50%;
+      background-color: #333;
+    
+      border-radius: 100%;  
+      -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+      animation: sk-scaleout 1.0s infinite ease-in-out;
     }
-  }
-  
-  @keyframes sk-scaleout {
-    0% { 
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    } 100% {
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
-      opacity: 0;
+    
+    @-webkit-keyframes sk-scaleout {
+      0% { -webkit-transform: scale(0) }
+      100% {
+        -webkit-transform: scale(1.0);
+        opacity: 0;
+      }
     }
-  }
+    
+    @keyframes sk-scaleout {
+      0% { 
+        -webkit-transform: scale(0);
+        transform: scale(0);
+      } 100% {
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+        opacity: 0;
+      }
+    }
 
 }
