--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -99,7 +99,7 @@
         // background: skyblue; // 사이즈 테스트 중
         
         margin-right: 7%;
-        margin-left: 7%;;
+        margin-left: 7%;
         margin-bottom: 3px;
 
         .email_div {   // 에러메세지
