--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -95,8 +95,8 @@
 
       .userInfo_input_container {
 
-        // margin-right: 7%;
-        margin-left: 7%;;
+        margin-right: 7%;
+        margin-left: 7%;
         margin-bottom: 3px;
         
         .email_div {
