--- a/src/css/Comments.scss
+++ b/src/css/Comments.scss
@@ -163,15 +163,16 @@
   left: 0%;
 }
 
+.favoriteBorder {
+  color: rgb(0, 0, 0);
+  font-size: 40px;
+  font-weight: bold;
+}
+
 .favorite {
   color: rgb(252, 99, 11);
   font-size: 40px;
   font-weight: bold;
-  // width: 40px;
-  // height: 30px;
-  // color: white;
-  // background-color: rgb(97, 69, 163);
-  // border-radius: 10px;
 }
 
 .commentDiv {
