--- a/src/css/Landing.scss
+++ b/src/css/Landing.scss
@@ -34,7 +34,7 @@
 .video_box {
   // color: white;
   width: 100%;
-  height: 97vh;
+  height: 100%;
   overflow: hidden;
   margin: 0px auto;
   position: relative;
@@ -42,7 +42,7 @@
 
   // 가로화면 꽉 차게
   // video {
-    // width: 100%;
+  //   width: 100%;
   // }
   
   .landing_text {
@@ -55,6 +55,25 @@
     color: white;
     // z-index: ;
   }
+  
+  .scrollDown {
+    position: absolute;
+    font-size: 2.5rem;
+    color: white;
+    top: 85%;
+    left: 48.95%;
+
+    &:hover {
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
+      left: unset;
+      text-align: center;
+      // background: rgba(0, 0, 5, 0.24);
+      
+      background: linear-gradient(to top, black,90%, rgba(0, 0, 0, 0));
+    }
+  }
 
   #test {
     position: absolute;
@@ -62,6 +81,7 @@
     width: 100%;
     text-align: center;
     color: whitesmoke;
+    
   }
 
 }
