--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -36,6 +36,56 @@
       text-align: right;
       padding-right: 10%;
     }
+
+
+
+    .box_img {
+      width: 100px;
+      height: 100px;
+      // border-radius: 100%;
+      // margin: auto;
+      padding: 10px;
+      margin-bottom: 10px;
+      
+    
+      .profile_img{
+        
+        // display: block;
+        // width: inherit;
+        width: 100%;
+        height: 100%;
+        // object-fit: cover;
+        border: solid rgba(0, 0, 0, 0.322);
+        border-width: 1px;
+        border-radius: 30px;
+        
+        
+      }
+      .add_profile_box_1{
+        // width: 30px;
+        // height: 30px;
+        position: relative;  // 아래 카메라 아이콘을 프사에 고정시키기 위해 상위 div에 relative로 설정 후 하위에선 absolute로 고정
+        .add_profile_box_2 {
+          
+          background: rgb(223, 223, 223);
+          padding: 3px;
+          position: absolute;
+          top: 58px;  // 이건 왜 퍼센테이지가 안먹는지 모르겠음.
+          left: 71%;
+          
+
+          // align-items: center;
+          border-radius: 100%;
+          .add_profile {
+            
+            font-size: 20px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+          }
+        }
+      }
+    }
   }
 
   .signUp_box {
@@ -165,8 +215,10 @@
     .division_line {
       background: rgba(204, 204, 214, 0.336);
       width: 1px;
-      height: 10rem;
-      margin-top: 4%;
+      height: 20rem;
+      // margin-top: 4%;
+      margin-top: 93px;
+      margin-bottom: auto;
       margin-left: 1.5rem;
       
       direction: column;
@@ -178,7 +230,8 @@
       width: 40%;
       // margin-left: 10px;
       // margin-right: 3%;
-      // margin-bottom: 3%;
+      margin-top: 95px;
+      // margin-bottom: 33%;
       #social_login_title {
         // font-family: 'Amatic SC', cursive;
         font-family: 'Advent Pro', sans-serif;
