--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -46,20 +46,31 @@
       // margin: auto;
       padding: 10px;
       margin-bottom: 10px;
+      z-index: 1;
       
+      #myprofile {
+        position: fixed;
+        // display: flex;
+        top: -10000000vh;
+        color: rgba(255, 255, 255, 0);
+        font-size: 0px;
+      }
     
+
       .profile_img{
         
         // display: block;
         // width: inherit;
         width: 100%;
         height: 100%;
-        // object-fit: cover;
+        object-fit: cover;
         border: solid rgba(0, 0, 0, 0.322);
         border-width: 1px;
         border-radius: 30px;
-        
-        
+
+        &:hover {
+          cursor: pointer;
+        }
       }
       .add_profile_box_1{
         // width: 30px;
@@ -72,8 +83,10 @@
           position: absolute;
           top: 58px;  // 이건 왜 퍼센테이지가 안먹는지 모르겠음.
           left: 71%;
+          &:hover {
+            cursor: pointer;
+          }
           
-
           // align-items: center;
           border-radius: 100%;
           .add_profile {
