--- a/src/css/Landing.scss
+++ b/src/css/Landing.scss
@@ -31,7 +31,14 @@
 //   position: relative;
 // }
 
+@font-face {
+  font-family: yleeFont;
+  src: url("../font/ylee_Mortal_Heart.ttf")
+}
+
+
 .video_box {
+  
   // color: white;
   width: 100%;
   height: 100%;
@@ -40,20 +47,116 @@
   position: relative;
   z-index: 1;
 
+  // text-align: center;
   // 가로화면 꽉 차게
   // video {
   //   width: 100%;
   // }
   
   .landing_text {
+    font-family: yleeFont;
     position: absolute;
-    top:50%;
-    width: 100%;
-    text-align: center;
-    // left: 0;
-    // right: 0;
+    top:33%;
+    width: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 2%;
+    // margin: auto;
+
+    display: flex;
+    // // align-content: center;
+    // justify-content: center;
+    // // right: 0;
+    overflow: hidden;
+    // color: transparent;
     color: white;
-    // z-index: ;
+    backface-visibility: hidden;
+    
+    .text_box {
+      margin: auto;
+      
+      .landing_text_intro_1 {
+        font-size: 3rem;
+        text-align: right;
+        margin-bottom: 20px;
+        
+        // span {
+        //   display: inline-block;
+        //   text-shadow: 0 0 0 whitesmoke;
+        //   animation: smoky 5s 3s both;
+        // }
+      }
+      .landing_text_intro_2 {
+        font-size: 2rem;
+        text-align: right;
+        margin-bottom: 20px;
+        
+        // span {
+        //   display: inline-block;
+        //   text-shadow: whitesmoke;
+        //   animation: smoky 5s 3s both;
+        // }
+        // span:nth-child(even) {
+        //   animation-name: smoky-mirror;
+        // }
+      }
+      .landing_text_intro_3 {
+        font-size: 1rem;
+        text-align: right;
+        margin-right: 10px;
+        margin-bottom: 20px;
+
+        // span {
+        //   display: inline-block;
+        //   text-shadow: whitesmoke;
+        //   animation: 5s 3s both;
+        // }
+      }
+      span {
+        display: inline-block;
+        text-shadow: whitesmoke;
+        animation: smoky 5s 3s both;
+      }
+      span:nth-child(even) {
+        animation-name: smoky-mirror;
+      }
+
+      @keyframes smoky {
+        60% {
+          text-shadow: 0 0 40px whitesmoke;
+        }
+        to {
+          transform: 
+            translate3d(15rem, -8rem, 0)
+            rotate(-40deg)
+            skewX(70deg)
+            scale(1.5);
+          text-shadow: 0 0 20px whitesmoke;
+          opacity: 0;
+        }
+      }
+
+      @keyframes smoky-mirror {
+        60% {
+          text-shadow: 0 0 40px whitesmoke;
+        }
+        to {
+          transform: 
+            translate3d(18rem, -8rem, 0)
+            rotate(-40deg)
+            skew(-70deg)
+            scale(2);
+          text-shadow: 0 0 20px whitesmoke;
+          opacity: 0;
+        }
+      }
+
+      @for $item from 1 through 21 {
+        span:nth-of-type(#{$item}) {
+          animation-delay: #{(3 + ($item/10))}s;
+        }
+      }
+    }
   }
   
   .scrollDown {
