--- a/src/css/Landing.scss
+++ b/src/css/Landing.scss
@@ -56,13 +56,14 @@
   .landing_text {
     font-family: yleeFont;
     position: absolute;
-    top:33%;
-    width: 45%;
+    top:0%;
+    width: 100%;
+    height: 100%;
     left: 50%;
     transform: translateX(-50%);
     padding: 2%;
     // margin: auto;
-
+    z-index: 2;
     display: flex;
     // // align-content: center;
     // justify-content: center;
