:art: 갤러리, 즐겨찾기 페이지 구현
갤러리, 즐겨찾기 페이지 구현

--- a/src/css/All.css
+++ b/src/css/All.css
@@ -13,6 +13,18 @@
   padding: 0 40px;
 }
 
+.flex_Gallery {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 40px;
+}
+
+.flex_Favorite {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 40px;
+}
+
 .photo {
   cursor: pointer;
 }
